// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepTitle renders correctly  1`] = `
<DocumentFragment>
  .cache-1lgdhts-Step {
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #151a2d;
}

.cache-t9e53m-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-1m08j4b-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 16px;
  font-size: 24px;
}

<div
    class="cache-1lgdhts-Step e17jwwhf1"
  >
    <div
      class="cache-t9e53m-StyledContainer e1u3ywq30"
    >
      1
    </div>
    <div
      class="cache-1m08j4b-StyledDiv e17jwwhf0"
    >
      Item 1
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepTitle renders correctly with bulletIcon & bulletVariant 1`] = `
<DocumentFragment>
  .cache-1lgdhts-Step {
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #151a2d;
}

.cache-15uwjvh-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  background-color: #eafffb;
  color: #149a7b;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-4hen91-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.cache-4hen91-StyledIcon-sizeStyles.cache-4hen91-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-1m08j4b-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 16px;
  font-size: 24px;
}

<div
    class="cache-1lgdhts-Step e17jwwhf1"
  >
    <div
      class="cache-15uwjvh-StyledContainer e1u3ywq30"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-4hen91-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        />
      </svg>
    </div>
    <div
      class="cache-1m08j4b-StyledDiv e17jwwhf0"
    >
      Item 1
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepTitle renders correctly with bulletIcon 1`] = `
<DocumentFragment>
  .cache-1lgdhts-Step {
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #151a2d;
}

.cache-t9e53m-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-4hen91-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.cache-4hen91-StyledIcon-sizeStyles.cache-4hen91-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-1m08j4b-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 16px;
  font-size: 24px;
}

<div
    class="cache-1lgdhts-Step e17jwwhf1"
  >
    <div
      class="cache-t9e53m-StyledContainer e1u3ywq30"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-4hen91-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        />
      </svg>
    </div>
    <div
      class="cache-1m08j4b-StyledDiv e17jwwhf0"
    >
      Item 1
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepTitle renders correctly with disabled state & bullet icon 1`] = `
<DocumentFragment>
  .cache-b6lmz-Step {
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b2b6c3;
}

.cache-16j3ie1-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #b2b6c3;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-4hen91-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.cache-4hen91-StyledIcon-sizeStyles.cache-4hen91-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-1m08j4b-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 16px;
  font-size: 24px;
}

<div
    class="cache-b6lmz-Step e17jwwhf1"
  >
    <div
      class="cache-16j3ie1-StyledContainer e1u3ywq30"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-4hen91-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
    <div
      class="cache-1m08j4b-StyledDiv e17jwwhf0"
    >
      <div>
        Item 1 with disabled state
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepTitle renders correctly with disabled state 1`] = `
<DocumentFragment>
  .cache-b6lmz-Step {
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b2b6c3;
}

.cache-16j3ie1-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #b2b6c3;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-1m08j4b-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 16px;
  font-size: 24px;
}

<div
    class="cache-b6lmz-Step e17jwwhf1"
  >
    <div
      class="cache-16j3ie1-StyledContainer e1u3ywq30"
    >
      1
    </div>
    <div
      class="cache-1m08j4b-StyledDiv e17jwwhf0"
    >
      <div>
        Item 1 with disabled state
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepTitle renders correctly with small size 1`] = `
<DocumentFragment>
  .cache-1lgdhts-Step {
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #151a2d;
}

.cache-1ut1z3i-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 24px;
  height: 24px;
  font-size: 14px;
}

.cache-1wj8egs-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 8px;
  font-size: 16px;
}

<div
    class="cache-1lgdhts-Step e17jwwhf1"
  >
    <div
      class="cache-1ut1z3i-StyledContainer e1u3ywq30"
    >
      1
    </div>
    <div
      class="cache-1wj8egs-StyledDiv e17jwwhf0"
    >
      Item 1 small
    </div>
  </div>
</DocumentFragment>
`;
